--- a/Demo_MVVMBasic/app.config
+++ b/Demo_MVVMBasic/app.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+<configSections>
+</configSections>
+<connectionStrings>
+    <add name="Demo_MVVMBasic.Properties.Settings.WidgetsConnectionString"
+        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataAccessLayer\SQL\Widgets.mdf;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+</connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
